--- a/iot_config.json
+++ b/iot_config.json
@@ -1,8 +1,11 @@
 {
 	"region_name" : "us-east-1",
-	"calibration_container_image" : "<account number>.dkr.ecr.us-east-1.amazonaws.com/fmucalibrate",
+	"calibration_container_image" : "873069797454.dkr.ecr.us-east-1.amazonaws.com/fmucalibrate",
 	"logGroupName" : "/aws/batch/job",
     "batch_name" : "dtBatchpredictioncompute",
+    "twinmaker_workspace_name": "FMUTwinMakerWorkspace",
+    "twinmaker_3d_model": "../assets/3dassets/rollerTwin.bin",
+    "twinmaker_3d_scene": "../assets/twinmakerscene/generated_FirstScene.json",
     "batch_compute_min_vcpu" : 0,
     "batch_compute_max_vcpu" : 300,
 	"vCPU" : 40,
